--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
 	<title>CARAVAN</title>
 </head>
 <body>
-	<!-- header用のdiv -->
-	<div class="header">
-		<div class="header-top"></div>
-		<div class="header-bottom"></div>
-	</div>
+	<!-- header -->
+	<header>
+		<h1 class="headline">
+			<a href="index.html">CARAVAN</a>
+		</h1>
+	</header>
+	<nav>
+		<ul class="nav-list">
+			<li class="nav-list-item">
+				<a href="index.html">home</a>
+			</li>
+			<li class="nav-list-item">about</li>
+			<li class="nav-list-item">topic</li>
+		</ul>
+	</nav>
 	<!-- main-visual用のdiv -->
 	<div class="main-visual">
 		<div class="main-visual-content"></div>
@@ -22,6 +32,8 @@
 		<div class="sidebar"></div>
 	</div>
 	<!-- footer -->
-	<div class="footer"></div>
+	<footer>
+		<p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+	</footer>
 </body>
 </html>
