--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 		</div>
 	</div>
 	<!-- main -->
-	<div class="main clearfix">
-		<div class="blog"></div>
+	<main class="main clearfix">
+		<section class="blog">
+			<h2 class="blog-headline">recent blogs</h2>
+		</section>
 		<div class="sidebar"></div>
-	</div>
+	</main>
 	<!-- footer -->
 	<footer>
 		<p class="footer-text">© All rights reserved by Infratop.Inc.</p>
