--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- CSS -->
+	<script src="https://kit.fontawesome.com/a3d3485aab.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>CARAVAN</title>
 </head>
@@ -12,6 +13,11 @@
 		<h1 class="headline">
 			<a href="index.html">CARAVAN</a>
 		</h1>
+		<div class="social">
+			<i class="fab fa-facebook-square"></i>
+		    <i class="fab fa-twitter-square"></i>
+		    <i class="fab fa-instagram"></i>
+		</div>
 	</header>
 	<nav>
 		<ul class="nav-list">
