--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0"
 	<!-- CSS -->
 	<script src="https://kit.fontawesome.com/a3d3485aab.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
