--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0"
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- CSS -->
 	<script src="https://kit.fontawesome.com/a3d3485aab.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
@@ -149,7 +149,7 @@
 				</div>
 			</section>
 			<section class="categories">
-				<h2 class="categories-headline"></h2>
+				<h2 class="categories-headline">Categories</h2>
 				<div class="sidebar-contents">
 					<p class="categories-text">Technology(15)</p>
 					<p class="categories-text">Business(23)</p>
